--- a/home.html
+++ b/home.html
@@ -5,7 +5,8 @@
     <title>Trang chủ</title>
 </head>
 <body>
-<h1> Barcelona đón 3 viện binh "khủng" tháng 1, tất tay dấy R </h1>h
+<h1> MU bị "Ronaldinho của Newcastle" giỡn mặt, chờ viện binh đua top 4
+    R </h1>h
   <p> log<sub>10</sub>20=10</p>
  <p> Thời tiết này chỉ nên ở nhà <span>, không muốn học gì hết.</span>
 <p>
