--- a/sesion2_democss.html
+++ b/sesion2_democss.html
@@ -12,7 +12,7 @@
         Đội chủ sân Nou Camp đang làm mọi cách để gia nhập top 4 khi chỉ đang kém đội xếp thứ 4 là Rayo Vallecano 2 điểm. Mọi thứ đang dần được cải thiện dưới sự dẫn dắt của Xavi và vấn đề sẽ chỉ nằm ở việc Barca sẽ bổ sung thêm lực lượng nhằm phục vụ cho kế hoạch lâu dài của chiến lược gia người Tây Ban Nha.
     </p>
 <p>
-    Barcelona đang rất tích cực trên thị trường chuyển nhượng và điều đó giúp đội bóng này chuẩn bị hưởng thành quả khi phiên chợ mùa đông chính thức mở cửa.
+    Barcelona<br> đang rất tích cực trên thị trường chuyển nhượng và điều đó giúp đội bóng này chuẩn bị hưởng thành quả khi phiên chợ mùa đông chính thức mở cửa.
 
 </p>
 </body>
