--- a/demo_js.html
+++ b/demo_js.html
@@ -178,7 +178,8 @@
     r = r*100; // (r>0 && r<100)
     r = parseInt(r); // r>=0 && r<=99
     //  console.log(r);
-    //nhập 5 số khác nhau
+
+    // nhập 5 số khác nhau
     var arr = [];
     while(arr.length<5){
         var n;
