--- a/labs4.html
+++ b/labs4.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/labs4.css"/>
+    <link rel="stylesheet" href="CSS/labs4.css"/>
 </head>
 <body>
 <div class="products">
@@ -14,56 +14,56 @@
         <div class="row">
             <div class="item">
                 <div class="item-box">
-                    <img src="imgs/anhso1.jpg"/>
+                    <img src="IMGs/anh%20so%201.jpg"/>
                     <h2>Product Name</h2>
                     <p>100.000VND</p>
                 </div>
             </div>
             <div class="item">
                 <div class="item-box">
-                    <img src="imgs/anhso1.jpg"/>
+                    <img src="IMGs/anhso1.jpg"/>
                     <h2>Product Name</h2>
                     <p>100.000VND</p>
                 </div>
             </div>
             <div class="item">
                 <div class="item-box">
-                    <img src="imgs/anhso1.jpg"/>
+                    <img src="IMGs/anhso1.jpg"/>
                     <h2>Product Name</h2>
                     <p>100.000VND</p>
                 </div>
             </div>
             <div class="item">
                 <div class="item-box">
-                    <img src="imgs/anhso1.jpg"/>
+                    <img src="IMGs/anhso1.jpg"/>
                     <h2>Product Name</h2>
                     <p>100.000VND</p>
                 </div>
             </div>
             <div class="item">
                 <div class="item-box">
-                    <img src="imgs/anhso1.jpg"/>
+                    <img src="IMGs/anhso1.jpg"/>
                     <h2>Product Name</h2>
                     <p>100.000VND</p>
                 </div>
             </div>
             <div class="item">
                 <div class="item-box">
-                    <img src="imgs/anhso1.jpg"/>
+                    <img src="IMGs/anhso1.jpg"/>
                     <h2>Product Name</h2>
                     <p>100.000VND</p>
                 </div>
             </div>
             <div class="item">
                 <div class="item-box">
-                    <img src="imgs/anhso1.jpg"/>
+                    <img src="IMGs/anhso1.jpg"/>
                     <h2>Product Name</h2>
                     <p>100.000VND</p>
                 </div>
             </div>
             <div class="item">
                 <div class="item-box">
-                    <img src="imgs/anhso1.jpg"/>
+                    <img src="IMGs/anhso1.jpg"/>
                     <h2>Product Name</h2>
                     <p>100.000VND</p>
                 </div>
@@ -73,3 +73,7 @@
 </div>
 </body>
 </html>
+© 2022 GitHub, Inc.
+Terms
+Privacy
+Security
