--- a/Asisignment JS3.html
+++ b/Asisignment JS3.html
@@ -2,18 +2,223 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JS3</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-
+    <title>Forecast weather</title>
+    <link rel="stylesheet" href="vendors/bootstrap3.4.1/css/bootstrap.css"/>
+    <link rel="stylesheet" href="CSS/forecast.css"/>
 </head>
 <body>
-<div class="products">
-    <div class = "content"
+<section class="col-md-12">
+    <div class="container">
+        <li class="col-md-3">
+            <div class="item">
+                <h3>2020-02-19 15:00:00</h3>
+                <h2>11.5 <sup>o</sup>C</h2>
+                <p>overcast cloud</p>
+                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+            </div>
+        </li>
+        <li class="col-md-3">
+            <div class="item">
+                <h3>2020-02-19 15:00:00</h3>
+                <h2>11.5 <sup>o</sup>C</h2>
+                <p>overcast cloud</p>
+                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+            </div>
+        </li>
+        <li class="col-md-3">
+            <div class="item">
+                <h3>2020-02-19 15:00:00</h3>
+                <h2>11.5 <sup>o</sup>C</h2>
+                <p>overcast cloud</p>
+                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+            </div>
+        </li>
+        <li class="col-md-3">
+            <div class="item">
+                <h3>2020-02-19 15:00:00</h3>
+                <h2>11.5 <sup>o</sup>C</h2>
+                <p>overcast cloud</p>
+                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+            </div>
+        </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li>
+        <li class="col-md-3">
+            <div class="item">
+                <h3>2020-02-19 15:00:00</h3>
+                <h2>11.5 <sup>o</sup>C</h2>
+                <p>overcast cloud</p>
+                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+            </div>
+        </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li><li class="col-md-3">
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li><li class="col-md-3">
+        <li class="col-md-3">
+            <div class="item">
+                <h3>2020-02-19 15:00:00</h3>
+                <h2>11.5 <sup>o</sup>C</h2>
+                <p>overcast cloud</p>
+                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+            </div>
+        </li>
+        <div class="item">
+            <h3>2020-02-19 15:00:00</h3>
+            <h2>11.5 <sup>o</sup>C</h2>
+            <p>overcast cloud</p>
+            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+        </div>
+    </li>
+        <li class="col-md-3">
+            <div class="item">
+                <h3>2020-02-19 15:00:00</h3>
+                <h2>11.5 <sup>o</sup>C</h2>
+                <p>overcast cloud</p>
+                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+            </div>
+        </li>
+        <li class="col-md-3">
+            <div class="item">
+                <h3>2020-02-19 15:00:00</h3>
+                <h2>11.5 <sup>o</sup>C</h2>
+                <p>overcast cloud</p>
+                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
+            </div>
+        </li>
 
-</div>
 
 
+        <ul class="row" id="forecast">
+
+        </ul>
+    </div>
+</section>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript">
+    $.ajax({
+        url:"http://api.openweathermap.org/data/2.5/forecast",
+        method:"get",
+        data:{
+            q:"Hanoi,vietnam",
+            appid:"09a71427c59d38d6a34f89b47d75975c",
+            units:"metric"
+        },
+        success:function (rs){
+            var list  = rs.list;
+            for(var i=0;i<list.length;i++){
+                var date = list[i].dt_txt;
+                var tmp = list[i].main.temp;
+                //  var dsc = list.weather[0].description
+                var dsc = "";
+                for (var i=0;i<rs.weather.length;i++){
+                    dsc += list.weather[i].description;
+                }
+                var icon = list[i].weather[0].icon;
+                var li_html = "<li class=\"col-md-3\">\n" +
+                    "                    <div class=\"item\">\n" +
+                    "                        <h3>"+date+"</h3>\n" +
+                    "                        <h2>"+tmp+" <sup>o</sup>C</h2>\n" +
+                    "                        <p class='text-capitalize'>"+dsc+"</p>\n" +
+                    "                        <img src=\"http://openweathermap.org/img/wn/"+icon+"@2x.png\"/>\n" +
+                    "                    </div>\n" +
+                    "                </li>";
+                $("#forecast").append(li_html);
+            }
+        }
+    });
+</script>
 </body>
 </html>
