--- a/demo AJAX.html
+++ b/demo AJAX.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Demo AJAX</title>
-    <link rel="stylesheet" href="Vendors/bootstrap3.4.1/css/bootstrap.css"/>
-    <link rel="stylesheet" href="Vendors/font-awesome/css/all.css"/>
+    <link rel="stylesheet" href="vendors/bootstrap3.4.1/css/bootstrap.css"/>
+    <link rel="stylesheet" href="vendors/font-awesome/css/all.css"/>
 </head>
 <body>
 <section class="col-md-12">
