--- a/demo_bootstrap.html
+++ b/demo_bootstrap.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Demo Bootstrap</title>
-    <link rel="stylesheet" href="Vendors/bootstrap3.4.1/css/bootstrap.css"/>
+    <link rel="stylesheet" href="vendors/bootstrap3.4.1/css/bootstrap.css"/>
     <link rel="stylesheet" href="CSS/demobootstrap.css"/>
 </head>
 <body>
