--- a/Asisignment JS3.html
+++ b/Asisignment JS3.html
@@ -4,192 +4,23 @@
     <meta charset="UTF-8">
     <title>Forecast weather</title>
     <link rel="stylesheet" href="vendors/bootstrap3.4.1/css/bootstrap.css"/>
-    <link rel="stylesheet" href="CSS/forecast.css"/>
+    <link rel="stylesheet" href="css/forecast.css"/>
 </head>
 <body>
 <section class="col-md-12">
     <div class="container">
-        <li class="col-md-3">
-            <div class="item">
-                <h3>2020-02-19 15:00:00</h3>
-                <h2>11.5 <sup>o</sup>C</h2>
-                <p>overcast cloud</p>
-                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-            </div>
-        </li>
-        <li class="col-md-3">
-            <div class="item">
-                <h3>2020-02-19 15:00:00</h3>
-                <h2>11.5 <sup>o</sup>C</h2>
-                <p>overcast cloud</p>
-                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-            </div>
-        </li>
-        <li class="col-md-3">
-            <div class="item">
-                <h3>2020-02-19 15:00:00</h3>
-                <h2>11.5 <sup>o</sup>C</h2>
-                <p>overcast cloud</p>
-                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-            </div>
-        </li>
-        <li class="col-md-3">
-            <div class="item">
-                <h3>2020-02-19 15:00:00</h3>
-                <h2>11.5 <sup>o</sup>C</h2>
-                <p>overcast cloud</p>
-                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-            </div>
-        </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li>
-        <li class="col-md-3">
-            <div class="item">
-                <h3>2020-02-19 15:00:00</h3>
-                <h2>11.5 <sup>o</sup>C</h2>
-                <p>overcast cloud</p>
-                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-            </div>
-        </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li><li class="col-md-3">
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li><li class="col-md-3">
-        <li class="col-md-3">
-            <div class="item">
-                <h3>2020-02-19 15:00:00</h3>
-                <h2>11.5 <sup>o</sup>C</h2>
-                <p>overcast cloud</p>
-                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-            </div>
-        </li>
-        <div class="item">
-            <h3>2020-02-19 15:00:00</h3>
-            <h2>11.5 <sup>o</sup>C</h2>
-            <p>overcast cloud</p>
-            <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-        </div>
-    </li>
-        <li class="col-md-3">
-            <div class="item">
-                <h3>2020-02-19 15:00:00</h3>
-                <h2>11.5 <sup>o</sup>C</h2>
-                <p>overcast cloud</p>
-                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-            </div>
-        </li>
-        <li class="col-md-3">
-            <div class="item">
-                <h3>2020-02-19 15:00:00</h3>
-                <h2>11.5 <sup>o</sup>C</h2>
-                <p>overcast cloud</p>
-                <img src="http://openweathermap.org/img/wn/04n@2x.png"/>
-            </div>
-        </li>
-
 
 
         <ul class="row" id="forecast">
 
         </ul>
+
     </div>
 </section>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript">
     $.ajax({
-        url:"http://api.openweathermap.org/data/2.5/forecast",
+        url:"https://api.openweathermap.org/data/2.5/forecast",
         method:"get",
         data:{
             q:"Hanoi,vietnam",
@@ -203,8 +34,8 @@
                 var tmp = list[i].main.temp;
                 //  var dsc = list.weather[0].description
                 var dsc = "";
-                for (var i=0;i<rs.weather.length;i++){
-                    dsc += list.weather[i].description;
+                for (var j=0;j<list[i].weather.length;j++){
+                    dsc += list[i].weather[j].description;
                 }
                 var icon = list[i].weather[0].icon;
                 var li_html = "<li class=\"col-md-3\">\n" +
