--- a/CV.html
+++ b/CV.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Labs2</title>
-    <link rel="stylesheet" href="CSS/CV.css"/>
+    <link rel="stylesheet" href="css/CV.css"/>
 </head>
 <body>
 <table>
