--- a/demo_bootstrap.html
+++ b/demo_bootstrap.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Demo Bootstrap</title>
     <link rel="stylesheet" href="vendors/bootstrap3.4.1/css/bootstrap.css"/>
-    <link rel="stylesheet" href="CSS/demobootstrap.css"/>
+    <link rel="stylesheet" href="css/demobootstrap.css"/>
 </head>
 <body>
 <header class="header col-xs-12">
