--- a/sesion2_democss.html
+++ b/sesion2_democss.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>DEMO CSS</title>
-    <link rel="stylesheet" href="CSS/demo.css"/>
+    <link rel="stylesheet" href="css/demo.css"/>
 </head>
 <body>
     <h1>Barcelona đón 4 viện binh "khủng" tháng 1, tất tay đấu Real Madrid</h1>
