--- a/demoboxmodel.html
+++ b/demoboxmodel.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/boxmodel.css">
+    <link rel="stylesheet" href="css/boxmodel.css">
 </head>
 <body>
 
